# sql-env

./: .env.example  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
graders/: __init__.py  easy.py  hard.py  medium.py
server/: Dockerfile  __init__.py  app.py  sql_env_environment.py
